; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_nsp_out.c_dn_nsp_xmit_timeout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_nsp_out.c_dn_nsp_xmit_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.dn_scp = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dn_nsp_xmit_timeout(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.dn_scp*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %4 = load %struct.sock*, %struct.sock** %2, align 8
  %5 = call %struct.dn_scp* @DN_SK(%struct.sock* %4)
  store %struct.dn_scp* %5, %struct.dn_scp** %3, align 8
  %6 = load %struct.sock*, %struct.sock** %2, align 8
  %7 = call i32 @dn_nsp_output(%struct.sock* %6)
  %8 = load %struct.dn_scp*, %struct.dn_scp** %3, align 8
  %9 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %8, i32 0, i32 2
  %10 = call i32 @skb_queue_empty(i32* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load %struct.dn_scp*, %struct.dn_scp** %3, align 8
  %14 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %13, i32 0, i32 1
  %15 = call i32 @skb_queue_empty(i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %22, label %17

17:                                               ; preds = %12, %1
  %18 = load %struct.sock*, %struct.sock** %2, align 8
  %19 = call i32 @dn_nsp_persist(%struct.sock* %18)
  %20 = load %struct.dn_scp*, %struct.dn_scp** %3, align 8
  %21 = getelementptr inbounds %struct.dn_scp, %struct.dn_scp* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  br label %22

22:                                               ; preds = %17, %12
  ret i32 0
}

declare dso_local %struct.dn_scp* @DN_SK(%struct.sock*) #1

declare dso_local i32 @dn_nsp_output(%struct.sock*) #1

declare dso_local i32 @skb_queue_empty(i32*) #1

declare dso_local i32 @dn_nsp_persist(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
